--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "cors": "^2.8.5",
+    "debug": "~4.4.1",
+    "dotenv": "^16.5.0",
+    "express": "~5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "~1.10.0"
   }
 }
