--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "debug": "~4.4.1",
     "dotenv": "^16.5.0",
     "express": "~5.1.0",
